app/kubernetes/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-backend
  namespace: fastapi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app-backend
  template:
    metadata:
      labels:
        app: fastapi-app-backend
    spec:
      containers:
      - name: fastapi-app-backend
        image: mouhacisse007/backend:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
