app/kubernetes/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-backend
  namespace: fastapi-app
spec:
  selector:
    app: fastapi-app-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
  type: LoadBalancer
